# VeriSpecOSLab

./: .gitignore  .gitmodules  AGENTS.md  README.md  REASONIX.md  compose.yaml  package.json
vos/: .gitignore  Cargo.toml  TODO.md  package.json  tsconfig.scripts.json
vos/apps/vos-agent/: AGENTS.md  README.md  TODO.md  package.json
vos/apps/vos-agent/app/: cancellation.ts  cli.ts  config.ts  headless.ts  main.ts  resolve-model.ts  settings.ts  workspace.ts
vos/apps/vos-agent/app/agent/: loop.ts  output-schemas.ts  profiles.ts
vos/apps/vos-agent/app/context/: agents.ts  skills.ts
vos/apps/vos-agent/app/llm/: anthropic-client.ts  anthropic-translate.ts  deepseek-client.ts  model-registry.ts  ollama-client.ts  openai-client.ts  openai-compatible-client.ts  providers.ts  retry.ts  router.ts
vos/apps/vos-agent/docs/: README.md  agent-loop.md  architecture.md  configuration.md  error-log.md  getting-started.md  headless-api.md  stream-json.md  testing.md  threads.md  tools.md  tui-evaluation.md
vos/apps/vos-agent/tests/: cli.test.ts  config.test.ts  headless.test.ts  package.test.ts  resolve-model.test.ts  settings.test.ts
vos/apps/vos-cli/: package.json  tsconfig.json
vos/apps/vos-cli/app/: bootstrap.ts  cli.ts  dispatch.ts  errors.ts  main.ts  types.ts
vos/apps/vos-cli/tests/: agent-runner.test.ts  agent-schemas.test.ts  apply-patch.test.ts  auth-policy.test.ts  cli-shell.test.ts  cli.test.ts  debug-trace.test.ts  env.test.ts  executor.test.ts  http-serve.test.ts  manifest.test.ts  package-contract.test.ts  progress-agent.test.ts  progress-format.test.ts  progress-mcp.test.ts  report-generate.test.ts  repro-toolchain.test.ts  submit-pack.test.ts  trace-validation.test.ts  xv6-offline-flow.test.ts  yaml.test.ts
vos/apps/vos-demo/: package.json  tsconfig.json
vos/apps/vos-demo/app/: demo-context.ts  main.ts  server.ts
vos/apps/vos-demo/tests/: demo-context.test.ts  real-llm.test.ts  server.test.ts
vos/apps/vos-demo/web/: index.html  vite.config.ts
vos/apps/vos-web/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
vos/apps/vos-web/src/: App.tsx  index.css  main.tsx  styles.css
vos/apps/vos-web/tests/: mock-service.test.ts
vos/crates/vos-agent/: Cargo.toml
vos/crates/vos-agent/src/: agent.rs  apply.rs  codegen.rs  config.rs  context.rs  generate.rs  lib.rs  patch.rs  plan.rs  provider.rs  rig.rs  toolchain.rs  workflow.rs
vos/crates/vos-cli/: Cargo.toml
vos/crates/vos-cli/src/: app.rs  args.rs  main.rs
vos/crates/vos-core/: Cargo.toml
vos/crates/vos-core/src/: agent.rs  config.rs  envelope.rs  error.rs  evidence.rs  lib.rs  planning.rs  progress.rs  verify.rs
vos/crates/vos-course/: Cargo.toml
vos/crates/vos-course/src/: adapters.rs  api.rs  events.rs  lib.rs  models.rs  workflow.rs
vos/crates/vos-openai/: Cargo.toml
vos/crates/vos-openai/src/: chat.rs  client.rs  config.rs  extract.rs  lib.rs  responses.rs
vos/crates/vos-platform/: Cargo.toml
vos/crates/vos-platform/src/: command.rs  fs.rs  host.rs  lib.rs
vos/crates/vos-portal/: Cargo.toml
vos/crates/vos-portal/migrations/: 0001_portal_core.sql  0002_evidence_score_agent.sql  0003_soft_delete_metadata.sql
vos/crates/vos-portal/src/: adapters.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  postgres_crud.rs  postgres_store.rs  routes.rs  state.rs  store.rs  time.rs
vos/crates/vos-prompt/: Cargo.toml
vos/crates/vos-prompt/src/: batch.rs  context.rs  lib.rs  parse.rs  shared.rs  single.rs  skeleton.rs  toolchain.rs
vos/crates/vos-runtime/: Cargo.toml
vos/crates/vos-runtime/src/: arch.rs  build.rs  cache.rs  codegen.rs  config.rs  evidence.rs  fs_guard.rs  generator.rs  lib.rs  patch.rs  process.rs  progress.rs  provider.rs  provider_helpers.rs  rig.rs  run_qemu.rs  scope.rs  spec.rs  verify.rs
vos/crates/vos-spec/: Cargo.toml
vos/crates/vos-spec/src/: compose.rs  consistency.rs  derive.rs  graph.rs  hash.rs  hierarchy.rs  lib.rs  normalize.rs  paths.rs
vos/scripts/: install-manual-pdf-browsers.ts  manual-pdf.ts
vos/scripts/tests/: manual-pdf.test.ts
(+582 files in other folders)
