[workspace]
members = [
  "crates/vos-agent",
  "crates/vos-cli",
  "crates/vos-core",
  "crates/vos-spec",
  "crates/vos-prompt",
  "crates/vos-platform",
  "crates/vos-runtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
indicatif = "0.18"
reqwest = { version = "0.12", features = ["json"] }
rig-core = { version = "0.37.0", default-features = false, features = ["reqwest", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "time", "fs", "io-util"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
which = "8"
tempfile = "3"
regex = "1"
