[package]
name = "vos-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
rig-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
vos-core = { path = "../vos-core" }
vos-platform = { path = "../vos-platform" }
vos-prompt = { path = "../vos-prompt" }
vos-runtime = { path = "../vos-runtime" }
vos-spec = { path = "../vos-spec" }

[dev-dependencies]
tempfile.workspace = true
