[package]
name = "vos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vos"
path = "src/main.rs"

[dependencies]
clap.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
vos-core = { path = "../vos-core" }
vos-runtime = { path = "../vos-runtime" }
