[package]
name = "vos-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true
