[package]
name = "vos-portal"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vos-portal"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
vos-core = { path = "../vos-core" }
vos-course = { path = "../vos-course" }
vos-spec = { path = "../vos-spec" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[features]
default = []
postgres = ["dep:sqlx"]
