[package]
name = "vos-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
regex.workspace = true
tokio.workspace = true
toml.workspace = true
which.workspace = true
vos-platform = { path = "../vos-platform" }
vos-core = { path = "../vos-core" }
vos-prompt = { path = "../vos-prompt" }
vos-spec = { path = "../vos-spec" }

[dev-dependencies]
tempfile.workspace = true
